CLIENT-292: release-my-orders-overflow-fix

--- a/src/modules/dex/directives/dexMyOrders/myOrders.less
+++ b/src/modules/dex/directives/dexMyOrders/myOrders.less
@@ -4,7 +4,8 @@ w-dex-my-orders {
   display: block;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
+  overflow-x: auto;
 
   w-table {
     min-width: 500px;
